--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
 LOT 1
+détail d'une annonce
+- adapter le parser pour gérer à la fois la liste des annonces et le détail
+- ajout d'une regexp de détail pour l'url
+- dans le parser identifier cette regexp et lancer un autre event pour le détail (les fichiers js des parser doivent le gérer)
 
 liste des annonces :
 - ajouter la ville
@@ -24,10 +28,8 @@ Voir le détail d'une annonce
 
 amélio diverse tec
 - conserver les cookies des parsers
-- bug des images qui ne se mette pas a jour au téléchargement
 
 parser :
-avendrealouer.fr
 paruvendu.fr
 
 logic-immo.com
