Ajout de la catégorie "voiture"

--- a/TODO
+++ b/TODO
@@ -32,6 +32,7 @@ immobilier_notaires detail
 ouestfranceimmo detail
 orpi detail (manque orpi-bien-exception)
 
+lacentral
 https://www.thierry-immobilier.fr/
 http://www.agence-blandineau.com
 cotevillas.fr
